baml_language/crates/baml_tests/snapshots/diagnostic_errors/generics/baml_tests__diagnostic_errors__generics__03_hir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== HIR2 ===
class user.Box {
  value: user.T
}
class user.Container {
  inner: user.Box
}
class user.Factory {
  data: user.T
}
class user.Foo {
  value: user.T
}
class user.Holder {
  data: string
}
class user.Maker {
  data: user.T
}
class user.MaybeBox {
  value: user.T?
}
class user.Pair {
  first: user.A
  second: user.B
}
class user.Plain {
  name: string
}
class user.Shadow {
  value: user.T
}
class user.Stack {
  items: user.T[]
}
class user.Wrapper {
  data: user.T
}
function user.bad(x: user.T) -> user.T  [expr] {
  {  } x
}
function user.bare_in_union_param(f: user.Foo | user.Foo) -> string  [expr] {
  {  } match (f) { _: user.Foo => "specific", _: user.Foo => "bare" }
}
function user.create(value: user.T) -> user.Factory  [expr] {
  {  } user.Factory { data: value }
}
function user.from_json(j: baml.json.json) -> user.Foo  [expr] {
  user.Foo { value: baml.json.from_json(baml.json.field(j, "value")) }
}
function user.from_json(j: baml.json.json) -> user.Wrapper  [expr] {
  user.Wrapper { data: baml.json.from_json(baml.json.field(j, "data")) }
}
function user.from_json(j: baml.json.json) -> user.Holder  [expr] {
  user.Holder { data: baml.json.from_json(baml.json.field(j, "data")) }
}
function user.from_json(j: baml.json.json) -> user.Container  [expr] {
  user.Container { inner: baml.json.from_json(baml.json.field(j, "inner")) }
}
function user.from_json(j: baml.json.json) -> user.Stack  [expr] {
  user.Stack { items: baml.json.from_json(baml.json.field(j, "items")) }
}
function user.from_json(j: baml.json.json) -> user.Box  [expr] {
  user.Box { value: baml.json.from_json(baml.json.field(j, "value")) }
}
function user.from_json(j: baml.json.json) -> user.Maker  [expr] {
  user.Maker { data: baml.json.from_json(baml.json.field(j, "data")) }
}
function user.from_json(j: baml.json.json) -> user.Plain  [expr] {
  user.Plain { name: baml.json.from_json(baml.json.field(j, "name")) }
}
function user.from_json(j: baml.json.json) -> user.MaybeBox  [expr] {
  user.MaybeBox { value: baml.json.from_json(baml.json.field(j, "value")) }
}
function user.from_json(j: baml.json.json) -> user.Pair  [expr] {
  user.Pair { first: baml.json.from_json(baml.json.field(j, "first")), second: baml.json.from_json(baml.json.field(j, "second")) }
}
function user.from_json(j: baml.json.json) -> user.Shadow  [expr] {
  user.Shadow { value: baml.json.from_json(baml.json.field(j, "value")) }
}
function user.from_json(j: baml.json.json) -> user.Factory  [expr] {
  user.Factory { data: baml.json.from_json(baml.json.field(j, "data")) }
}
function user.from_string(params: string) -> user.Maker  [expr] {
  {  } user.Maker { data: params }
}
function user.from_value(params: user.T) -> user.Maker  [expr] {
  {  } user.Maker { data: params }
}
function user.get(self: ?) -> user.T  [expr] {
  {  } self.data
}
function user.get(self: ?) -> user.T  [expr] {
  {  } self.value
}
function user.get_data(self: ?) -> user.T  [expr] {
  {  } self.data
}
function user.get_first(self: ?) -> user.A  [expr] {
  {  } self.first
}
function user.get_or_default(self: ?, default: user.T) -> user.T  [expr] {
  {  } match (self.value) { v: user.T => v, _: null => default }
}
function user.get_second(self: ?) -> user.B  [expr] {
  {  } self.second
}
function user.of(value: user.T) -> user.Wrapper  [expr] {
  {  } user.Wrapper { data: value }
}
function user.peek(self: ?) -> user.T  [expr] {
  {  } self.items[0]
}
function user.swap(self: ?) -> user.Pair  [expr] {
  {  } user.Pair { first: self.second, second: self.first }
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  map { "data": baml.json.to_json(self.data) }
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  map { "value": baml.json.to_json(self.value) }
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  map { "data": baml.json.to_json(self.data) }
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  map { "data": self.data.to_json() }
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  map { "inner": self.inner.to_json() }
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  map { "items": self.items.to_json() }
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  map { "value": baml.json.to_json(self.value) }
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  map { "data": baml.json.to_json(self.data) }
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  map { "name": self.name.to_json() }
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  map { "value": baml.json.to_json(self.value) }
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  map { "first": baml.json.to_json(self.first), "second": baml.json.to_json(self.second) }
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  map { "value": baml.json.to_json(self.value) }
}
function user.unwrap(self: ?) -> user.T  [expr] {
  {  } self.inner.get()
}
function user.use_box() -> int  [expr] {
  { let b = user.Box { value: 42 } } b.get()
}
function user.use_factory() -> int  [expr] {
  { let f = Factory.create(42) } f.get()
}
function user.use_holder() -> int  [expr] {
  { let h = user.Holder { data: "hello" } } h.get_data()
}
function user.use_maker_static() -> user.Maker  [expr] {
  {  } Maker.from_value(42)
}
function user.use_maybe_box() -> int  [expr] {
  { let b = user.MaybeBox { value: null } } b.get_or_default(0)
}
function user.use_nested() -> int  [expr] {
  { let c = user.Container { inner: user.Box { value: 10 } } } c.unwrap()
}
function user.use_pair() -> string  [expr] {
  { let p = user.Pair { first: 1, second: "two" } } p.get_second()
}
function user.use_pair_swap() -> user.Pair  [expr] {
  { let p = user.Pair { first: 1, second: "two" } } p.swap()
}
function user.use_stack() -> string  [expr] {
  { let s = user.Stack { items: ["a", "b", "c"] } } s.peek()
}
function user.use_wrapper() -> user.Wrapper  [expr] {
  {  } Wrapper.of("hello")
}
function user.wrong_arity_extra() -> user.Box  [expr] {
  {  } user.Box { value: 42 }
}
function user.wrong_arity_missing() -> user.Box  [expr] {
  {  } user.Box { value: 42 }
}
function user.wrong_arity_on_non_generic() -> user.Plain  [expr] {
  {  } user.Plain { name: "hello" }
}
function user.wrong_arity_partial() -> user.Pair  [expr] {
  {  } user.Pair { first: 1, second: "two" }
}
class user.Todo {
  id: int
  title: string
  completed: bool
  userId: int
}
function user.GetTodo() -> user.Todo  [expr] {
  {  } baml.fetch_as(baml.HttpRequest { method: baml.HttpMethod.Get, url: "dummyjson.com/tod..." })
}
function user.from_json(j: baml.json.json) -> user.Todo  [expr] {
  user.Todo { id: baml.json.from_json(baml.json.field(j, "id")), title: baml.json.from_json(baml.json.field(j, "title")), completed: baml.json.from_json(baml.json.field(j, "completed")), userId: baml.json.from_json(baml.json.field(j, "userId")) }
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  map { "id": self.id.to_json(), "title": self.title.to_json(), "completed": self.completed.to_json(), "userId": self.userId.to_json() }
}
