baml_language/crates/baml_tests/snapshots/diagnostic_errors/generics/baml_tests__diagnostic_errors__generics__03_ppir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== PPIR ===
class user.Box {
  value: T
}
class user.Box$stream {
  value: T | null
}
class user.Container {
  inner: user.Box<T>
}
class user.Container$stream {
  inner: user.Box$stream<T> | null
}
class user.Factory {
  data: T
}
class user.Factory$stream {
  data: T | null
}
class user.Foo {
  value: T
}
class user.Foo$stream {
  value: T | null
}
class user.Holder {
  data: string
}
class user.Holder$stream {
  data: string | null
}
class user.Maker {
  data: T
}
class user.Maker$stream {
  data: T | null
}
class user.MaybeBox {
  value: T?
}
class user.MaybeBox$stream {
  value: T | null
}
class user.Pair {
  first: A
  second: B
}
class user.Pair$stream {
  first: A | null
  second: B | null
}
class user.Plain {
  name: string
}
class user.Plain$stream {
  name: string | null
}
class user.Shadow {
  value: T
}
class user.Shadow$stream {
  value: T | null
}
class user.Stack {
  items: T[]
}
class user.Stack$stream {
  items: T[]
}
class user.Wrapper {
  data: T
}
class user.Wrapper$stream {
  data: T | null
}
function user.bad(x: T) -> T  [expr] {
  {  } x
}
function user.bare_in_union_param(f: user.Foo<int> | user.Foo) -> string  [expr] {
  {  } match (f) { user.Foo<int> => "specific", user.Foo => "bare" }
}
function user.create(value: T) -> user.Factory<T>  [expr] {
  {  } user.Factory { data: value }
}
function user.from_string(params: string) -> user.Maker<T>  [expr] {
  {  } user.Maker { data: params }
}
function user.from_value(params: T) -> user.Maker<T>  [expr] {
  {  } user.Maker { data: params }
}
function user.get(self: ?) -> T  [expr] {
  {  } self.value
}
function user.get(self: ?) -> T  [expr] {
  {  } self.data
}
function user.get_data(self: ?) -> T  [expr] {
  {  } self.data
}
function user.get_first(self: ?) -> A  [expr] {
  {  } self.first
}
function user.get_or_default(self: ?, default: T) -> T  [expr] {
  {  } match (self.value) { v: T => v, null => default }
}
function user.get_second(self: ?) -> B  [expr] {
  {  } self.second
}
function user.of(value: T) -> user.Wrapper<T>  [expr] {
  {  } user.Wrapper { data: value }
}
function user.peek(self: ?) -> T  [expr] {
  {  } self.items[0]
}
function user.swap(self: ?) -> user.Pair<B, A>  [expr] {
  {  } user.Pair { first: self.second, second: self.first }
}
function user.unwrap(self: ?) -> T  [expr] {
  {  } self.inner.get()
}
function user.use_box() -> int  [expr] {
  { let b = user.Box { value: 42 } } b.get()
}
function user.use_factory() -> int  [expr] {
  { let f = Factory.create(42) } f.get()
}
function user.use_holder() -> int  [expr] {
  { let h = user.Holder { data: "hello" } } h.get_data()
}
function user.use_maker_static() -> user.Maker<int>  [expr] {
  {  } Maker.from_value(42)
}
function user.use_maybe_box() -> int  [expr] {
  { let b = user.MaybeBox { value: null } } b.get_or_default(0)
}
function user.use_nested() -> int  [expr] {
  { let c = user.Container { inner: user.Box { value: 10 } } } c.unwrap()
}
function user.use_pair() -> string  [expr] {
  { let p = user.Pair { first: 1, second: "two" } } p.get_second()
}
function user.use_pair_swap() -> user.Pair<string, int>  [expr] {
  { let p = user.Pair { first: 1, second: "two" } } p.swap()
}
function user.use_stack() -> string  [expr] {
  { let s = user.Stack { items: ["a", "b", "c"] } } s.peek()
}
function user.use_wrapper() -> user.Wrapper<string>  [expr] {
  {  } Wrapper.of("hello")
}
function user.wrong_arity_extra() -> user.Box<int, string>  [expr] {
  {  } user.Box { value: 42 }
}
function user.wrong_arity_missing() -> user.Box  [expr] {
  {  } user.Box { value: 42 }
}
function user.wrong_arity_on_non_generic() -> user.Plain<int>  [expr] {
  {  } user.Plain { name: "hello" }
}
function user.wrong_arity_partial() -> user.Pair<int>  [expr] {
  {  } user.Pair { first: 1, second: "two" }
}
function user.wrong_arity_partial_inferred() -> int  [expr] {
  { let pair = user.Pair { first: "one", second: "two" } } 0
}
class user.Todo {
  id: int
  title: string
  completed: bool
  userId: int
}
class user.Todo$stream {
  id: int | null
  title: string | null
  completed: bool | null
  userId: int | null
}
function user.GetTodo() -> user.Todo  [expr] {
  {  } baml.fetch_as(baml.HttpRequest { method: baml.HttpMethod.Get, url: "dummyjson.com/tod..." })
}
