baml_language/crates/baml_tests/snapshots/diagnostic_errors/generics/baml_tests__diagnostic_errors__generics__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
class user.Box {
  value: T
}
function user.Box.get(self: user.Box) -> unknown throws never {
  { : T
    self.value : T
  }
}
function user.Box.to_json(self: user.Box) -> baml.json.json throws baml.json.JsonSerializationError | baml.json.JsonParseError {
  map { "value": baml.json.to_json(self.value) } : map<string, baml.json.json>
}
function user.Box.from_json(j: baml.json.json) -> user.Box<unknown> throws baml.json.JsonParseError | baml.json.JsonDecodeError {
  baml.json.from_string<T>(baml.json.stringify(j)) : user.Box<T>
}
function user.use_box() -> int throws never {
  { : int
    let b = Box { value: 42 } : user.Box<int>
    b.get() : int
  }
}
class user.Wrapper {
  data: T
}
function user.Wrapper.of(value: unknown) -> user.Wrapper<unknown> throws never {
  { : user.Wrapper<T>
    Wrapper { data: value } : user.Wrapper<T>
  }
}
function user.Wrapper.to_json(self: user.Wrapper) -> baml.json.json throws baml.json.JsonSerializationError | baml.json.JsonParseError {
  map { "data": baml.json.to_json(self.data) } : map<string, baml.json.json>
}
function user.Wrapper.from_json(j: baml.json.json) -> user.Wrapper<unknown> throws baml.json.JsonParseError | baml.json.JsonDecodeError {
  baml.json.from_string<T>(baml.json.stringify(j)) : user.Wrapper<T>
}
function user.use_wrapper() -> user.Wrapper<string> throws never {
  { : user.Wrapper<string | "hello">
    Wrapper.of<T>("hello") : user.Wrapper<string | "hello">
  }
}
class user.Pair {
  first: A
  second: B
}
function user.Pair.get_first(self: user.Pair) -> unknown throws never {
  { : A
    self.first : A
  }
}
function user.Pair.get_second(self: user.Pair) -> unknown throws never {
  { : B
    self.second : B
  }
}
function user.Pair.swap(self: user.Pair) -> user.Pair<unknown, unknown> throws never {
  { : user.Pair<B, A>
    Pair { first: self.second, second: self.first } : user.Pair<B, A>
  }
}
function user.Pair.to_json(self: user.Pair) -> baml.json.json throws baml.json.JsonSerializationError | baml.json.JsonParseError {
  map { "first": baml.json.to_json(self.first), "second": baml.json.to_json(self.second) } : map<string, baml.json.json>
}
function user.Pair.from_json(j: baml.json.json) -> user.Pair<unknown, unknown> throws baml.json.JsonParseError | baml.json.JsonDecodeError {
  baml.json.from_string<T>(baml.json.stringify(j)) : user.Pair<A, B>
}
function user.use_pair() -> string throws never {
  { : string
    let p = Pair { first: 1, second: "two" } : user.Pair<int, string>
    p.get_second() : string
  }
}
function user.use_pair_swap() -> user.Pair<string, int> throws never {
  { : user.Pair<string, int>
    let p = Pair { first: 1, second: "two" } : user.Pair<int, string>
    p.swap() : user.Pair<string, int>
  }
}
class user.Maker {
  data: T
}
function user.Maker.from_string(params: string) -> user.Maker<unknown> throws never {
  { : user.Maker<T>
    Maker { data: params } : user.Maker<T>
  }
  !! 1848..1854: type mismatch: expected T, got string
}
function user.Maker.from_value(params: unknown) -> user.Maker<unknown> throws never {
  { : user.Maker<T>
    Maker { data: params } : user.Maker<T>
  }
}
function user.Maker.to_json(self: user.Maker) -> baml.json.json throws baml.json.JsonSerializationError | baml.json.JsonParseError {
  map { "data": baml.json.to_json(self.data) } : map<string, baml.json.json>
}
function user.Maker.from_json(j: baml.json.json) -> user.Maker<unknown> throws baml.json.JsonParseError | baml.json.JsonDecodeError {
  baml.json.from_string<T>(baml.json.stringify(j)) : user.Maker<T>
}
function user.use_maker_static() -> user.Maker<int> throws never {
  { : user.Maker<int | 42>
    Maker.from_value<T>(42) : user.Maker<int | 42>
  }
}
class user.Holder {
  data: string
}
function user.Holder.get_data(self: user.Holder) -> unknown throws never {
  { : string
    self.data : string
  }
  !! 2283..2371: type mismatch: expected T, got string
}
function user.Holder.to_json(self: user.Holder) -> baml.json.json throws baml.json.JsonSerializationError | baml.json.JsonParseError {
  map { "data": self.data.to_json() } : map<string, baml.json.json>
}
function user.Holder.from_json(j: baml.json.json) -> user.Holder<unknown> throws baml.json.JsonParseError | baml.json.JsonDecodeError {
  baml.json.from_string<T>(baml.json.stringify(j)) : user.Holder<T>
}
function user.use_holder() -> int throws never {
  { : int
    let h = Holder { data: "hello" } : user.Holder<int>
    h.get_data() : int
  }
}
class user.Shadow {
  value: T
}
function user.Shadow.bad<T>(x: T) -> T throws never {
  { : T
    x : T
  }
  !! 2686..2799: type parameter `T` on method shadows the same parameter on class `Shadow`. Please use a different name for the type parameter.
}
function user.Shadow.to_json(self: user.Shadow) -> baml.json.json throws baml.json.JsonSerializationError | baml.json.JsonParseError {
  map { "value": baml.json.to_json(self.value) } : map<string, baml.json.json>
}
function user.Shadow.from_json(j: baml.json.json) -> user.Shadow<unknown> throws baml.json.JsonParseError | baml.json.JsonDecodeError {
  baml.json.from_string<T>(baml.json.stringify(j)) : user.Shadow<T>
}
function user.wrong_arity_missing() -> user.Box throws never {
  { : user.Box
    Box { value: 42 } : user.Box
  }
  !! 3049..3053: class `Box` expects 1 type argument(s), got 0
  !! 3073..3075: type mismatch: expected T, got 42
}
function user.wrong_arity_extra() -> user.Box<int, string> throws never {
  { : user.Box<int, string>
    Box { value: 42 } : user.Box<int, string>
  }
  !! 3129..3146: class `Box` expects 1 type argument(s), got 2
}
function user.wrong_arity_partial() -> user.Pair<int> throws never {
  { : user.Pair<int>
    Pair { first: 1, second: "two" } : user.Pair<int>
  }
  !! 3256..3266: class `Pair` expects 2 type argument(s), got 1
  !! 941..943: unresolved type: B
}
class user.Plain {
  name: string
}
function user.Plain.to_json(self: user.Plain) -> baml.json.json throws baml.json.JsonSerializationError | baml.json.JsonParseError {
  map { "name": self.name.to_json() } : map<string, baml.json.json>
}
function user.Plain.from_json(j: baml.json.json) -> user.Plain throws baml.json.JsonParseError | baml.json.JsonDecodeError {
  baml.json.from_string<T>(baml.json.stringify(j)) : user.Plain
}
function user.wrong_arity_on_non_generic() -> user.Plain<int> throws never {
  { : user.Plain<int>
    Plain { name: "hello" } : user.Plain<int>
  }
  !! 3570..3581: class `Plain` expects 0 type argument(s), got 1
}
class user.Container {
  inner: user.Box<T>
}
function user.Container.unwrap(self: user.Container) -> unknown throws never {
  { : T
    self.inner.get<T>() : T
  }
}
function user.Container.to_json(self: user.Container) -> baml.json.json throws baml.json.JsonSerializationError | baml.json.JsonParseError {
  map { "inner": self.inner.to_json() } : map<string, baml.json.json>
}
function user.Container.from_json(j: baml.json.json) -> user.Container<unknown> throws baml.json.JsonParseError | baml.json.JsonDecodeError {
  baml.json.from_string<T>(baml.json.stringify(j)) : user.Container<T>
}
function user.use_nested() -> int throws never {
  { : int
    let c = Container { inner: Box { value: 10 } } : user.Container<int>
    c.unwrap() : int
  }
}
class user.Factory {
  data: T
}
function user.Factory.create(value: unknown) -> user.Factory<unknown> throws never {
  { : user.Factory<T>
    Factory { data: value } : user.Factory<T>
  }
}
function user.Factory.get(self: user.Factory) -> unknown throws never {
  { : T
    self.data : T
  }
}
function user.Factory.to_json(self: user.Factory) -> baml.json.json throws baml.json.JsonSerializationError | baml.json.JsonParseError {
  map { "data": baml.json.to_json(self.data) } : map<string, baml.json.json>
}
function user.Factory.from_json(j: baml.json.json) -> user.Factory<unknown> throws baml.json.JsonParseError | baml.json.JsonDecodeError {
  baml.json.from_string<T>(baml.json.stringify(j)) : user.Factory<T>
}
function user.use_factory() -> int throws never {
  { : int
    let f = Factory.create<T>(42) : user.Factory<42> -> user.Factory<int>
    f.get() : int
  }
}
class user.MaybeBox {
  value: T?
}
function user.MaybeBox.get_or_default(self: user.MaybeBox, default: unknown) -> unknown throws never {
  { : T
    match (self.value : T?) : T
      v: T =>
        v : T
      _: null =>
        default : T
  }
}
function user.MaybeBox.to_json(self: user.MaybeBox) -> baml.json.json throws baml.json.JsonSerializationError | baml.json.JsonParseError {
  map { "value": self.value?.to_json() } : map<string, baml.json.json?>
}
function user.MaybeBox.from_json(j: baml.json.json) -> user.MaybeBox<unknown> throws baml.json.JsonParseError | baml.json.JsonDecodeError {
  baml.json.from_string<T>(baml.json.stringify(j)) : user.MaybeBox<T>
}
function user.use_maybe_box() -> int throws never {
  { : int
    let b = MaybeBox { value: null } : user.MaybeBox<int>
    b.get_or_default(0) : int
  }
}
class user.Stack {
  items: T[]
}
function user.Stack.peek(self: user.Stack) -> unknown throws never {
  { : T
    self.items[0] : T
  }
}
function user.Stack.to_json(self: user.Stack) -> baml.json.json throws baml.json.JsonSerializationError | baml.json.JsonParseError {
  map { "items": self.items.to_json() } : map<string, baml.json.json>
}
function user.Stack.from_json(j: baml.json.json) -> user.Stack<unknown> throws baml.json.JsonParseError | baml.json.JsonDecodeError {
  baml.json.from_string<T>(baml.json.stringify(j)) : user.Stack<T>
}
function user.use_stack() -> string throws never {
  { : string
    let s = Stack { items: ["a", "b", "c"] } : user.Stack<string>
    s.peek() : string
  }
}
class user.Foo {
  value: T
}
function user.Foo.to_json(self: user.Foo) -> baml.json.json throws baml.json.JsonSerializationError | baml.json.JsonParseError {
  map { "value": baml.json.to_json(self.value) } : map<string, baml.json.json>
}
function user.Foo.from_json(j: baml.json.json) -> user.Foo<unknown> throws baml.json.JsonParseError | baml.json.JsonDecodeError {
  baml.json.from_string<T>(baml.json.stringify(j)) : user.Foo<T>
}
function user.bare_in_union_param(f: user.Foo<int> | user.Foo) -> string throws never {
  { : "specific" | "bare"
    match (f : user.Foo<int> | user.Foo) : "specific" | "bare"
      _: Foo<int> =>
        "specific" : "specific"
      _: Foo =>
        "bare" : "bare"
  }
  !! 5674..5689: class `Foo` expects 1 type argument(s), got 0
  !! 5777..5783: class `Foo` expects 1 type argument(s), got 0
}
class user.Box$stream {
  value: null | T
}
class user.Wrapper$stream {
  data: null | T
}
class user.Pair$stream {
  first: null | A
  second: null | B
}
class user.Maker$stream {
  data: null | T
}
class user.Holder$stream {
  data: null | string
}
class user.Shadow$stream {
  value: null | T
}
class user.Plain$stream {
  name: null | string
}
class user.Container$stream {
  inner: null | user.Box$stream<T>
}
class user.Factory$stream {
  data: null | T
}
class user.MaybeBox$stream {
  value: null | T
}
class user.Stack$stream {
  items: T[]
}
class user.Foo$stream {
  value: null | T
}
class user.Todo {
  id: int
  title: string
  completed: bool
  userId: int
}
function user.Todo.to_json(self: user.Todo) -> baml.json.json throws baml.json.JsonSerializationError | baml.json.JsonParseError {
  map { "id": self.id.to_json(), "title": self.title.to_json(), "completed": self.completed.to_json(), "userId": self.userId.to_json() } : map<string, baml.json.json>
}
function user.Todo.from_json(j: baml.json.json) -> user.Todo throws baml.json.JsonParseError | baml.json.JsonDecodeError {
  baml.json.from_string<T>(baml.json.stringify(j)) : user.Todo
}
function user.GetTodo() -> user.Todo throws never {
  { : unknown
    baml.fetch_as(baml.HttpRequest { method: baml.HttpMethod.Get, url: "dummyjson.com/tod..." }) : unknown
  }
  !! 106..124: unresolved name: fetch_as
  !! 165..185: unresolved name: HttpMethod
}
class user.Todo$stream {
  id: null | int
  title: null | string
  completed: null | bool
  userId: null | int
}
