baml_language/crates/baml_tests/snapshots/diagnostic_errors/generics/baml_tests__diagnostic_errors__generics__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 32310
---
=== COMPILER2 DIAGNOSTICS ===
  [type] Error: unresolved type: B
    ╭─[ classes.baml:40:11 ]
    │
 40 │     second B
    │           ─┬  
    │            ╰── unresolved type: B
    │ 
    │ Note: Error code: E0002
────╯

  [type] Error: type mismatch: expected T, got string
    ╭─[ classes.baml:75:26 ]
    │
 75 │         Maker<T> { data: params }
    │                          ───┬──  
    │                             ╰──── type mismatch: expected T, got string
    │ 
    │ Note: Error code: E0001
────╯

  [type] Error: type mismatch: expected T, got string
    ╭─[ classes.baml:94:35 ]
    │
 94 │ ╭─▶     function get_data(self) -> T {
    ┆ ┆   
 96 │ ├─▶         self.data
    │ │                       
    │ ╰─────────────────────── type mismatch: expected T, got string
    │     
    │     Note: Error code: E0001
────╯

  [type] Error: type parameter `T` on method shadows the same parameter on class `Shadow`. Please use a different name for the type parameter.
     ╭─[ classes.baml:110:12 ]
     │
 110 │ ╭─▶     value T
     ┆ ┆   
 115 │ ├─▶     }
     │ │           
     │ ╰─────────── type parameter `T` on method shadows the same parameter on class `Shadow`. Please use a different name for the type parameter.
     │     
     │     Note: Error code: E0001
─────╯

  [type] Error: class `Box` expects 1 type argument(s), got 0
     ╭─[ classes.baml:123:34 ]
     │
 123 │ function wrong_arity_missing() -> Box {
     │                                  ──┬─  
     │                                    ╰─── class `Box` expects 1 type argument(s), got 0
     │ 
     │ Note: Error code: E0001
─────╯

  [type] Error: type mismatch: expected T, got 42
     ╭─[ classes.baml:124:18 ]
     │
 124 │     Box { value: 42 }
     │                  ─┬  
     │                   ╰── type mismatch: expected T, got 42
     │ 
     │ Note: Error code: E0001
─────╯

  [type] Error: class `Box` expects 1 type argument(s), got 2
     ╭─[ classes.baml:128:32 ]
     │
 128 │ function wrong_arity_extra() -> Box<int, string> {
     │                                ────────┬────────  
     │                                        ╰────────── class `Box` expects 1 type argument(s), got 2
     │ 
     │ Note: Error code: E0001
─────╯

  [type] Error: class `Pair` expects 2 type argument(s), got 1
     ╭─[ classes.baml:133:34 ]
     │
 133 │ function wrong_arity_partial() -> Pair<int> {
     │                                  ─────┬────  
     │                                       ╰────── class `Pair` expects 2 type argument(s), got 1
     │ 
     │ Note: Error code: E0001
─────╯

  [type] Error: class `Plain` expects 0 type argument(s), got 1
     ╭─[ classes.baml:145:41 ]
     │
 145 │ function wrong_arity_on_non_generic() -> Plain<int> {
     │                                         ─────┬─────  
     │                                              ╰─────── class `Plain` expects 0 type argument(s), got 1
     │ 
     │ Note: Error code: E0001
─────╯

  [type] Error: class `Foo` expects 1 type argument(s), got 0
     ╭─[ classes.baml:234:32 ]
     │
 234 │ function bare_in_union_param(f: Foo<int> | Foo) -> string {
     │                                ───────┬───────  
     │                                       ╰───────── class `Foo` expects 1 type argument(s), got 0
     │ 
     │ Note: Error code: E0001
─────╯

  [type] Error: class `Foo` expects 1 type argument(s), got 0
     ╭─[ classes.baml:237:24 ]
     │
 237 │         _: Foo      => "bare",
     │                        ───┬──  
     │                           ╰──── class `Foo` expects 1 type argument(s), got 0
     │ 
     │ Note: Error code: E0001
─────╯

  [type] Error: unresolved name: fetch_as
   ╭─[ fetch_as.baml:8:29 ]
   │
 8 │ ╭─▶ function GetTodo() -> Todo {
 9 │ ├─▶     baml.fetch_as<Todo>(baml.HttpRequest {
   │ │                                                
   │ ╰──────────────────────────────────────────────── unresolved name: fetch_as
   │     
   │     Note: Error code: E0003
───╯

  [type] Error: unresolved name: HttpMethod
    ╭─[ fetch_as.baml:10:16 ]
    │
 10 │         method: baml.HttpMethod.Get,
    │                ──────────┬─────────  
    │                          ╰─────────── unresolved name: HttpMethod
    │ 
    │ Note: Error code: E0003
────╯
