baml_language/crates/baml_tests/snapshots/diagnostic_errors/generics/baml_tests__diagnostic_errors__generics__06_codegen.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
function user.Box.get(self: null) -> void {
    load_var self
    load_field .value
    return
}

function user.Container.unwrap(self: null) -> void {
    load_var self
    load_field .inner
    call user.Box.get
    return
}

function user.Factory.create(value: void) -> Factory {
    alloc_instance user.Factory
    load_var value
    init_field .data
    return
}

function user.Factory.get(self: null) -> void {
    load_var self
    load_field .data
    return
}

function user.GetTodo() -> Todo {
    load_const "parse error"
    call baml.sys.panic
    pop 1
    jump L0

  L0:
    unreachable
}

function user.Holder.get_data(self: null) -> void {
    load_var self
    load_field .data
    return
}

function user.Maker.from_string(params: string) -> Maker {
    alloc_instance user.Maker
    load_var params
    init_field .data
    return
}

function user.Maker.from_value(params: void) -> Maker {
    alloc_instance user.Maker
    load_var params
    init_field .data
    return
}

function user.MaybeBox.get_or_default(self: null, default: void) -> void {
    load_var self
    load_field .value
    store_var _3
    load_var _3
    pop 1
    load_const false
    pop_jump_if_false L0
    jump L1

  L0:
    load_var _3
    is_type null
    pop_jump_if_false L2
    load_var default
    jump L2

  L1:
    load_var _3

  L2:
    return
}

function user.Pair.get_first(self: null) -> void {
    load_var self
    load_field .first
    return
}

function user.Pair.get_second(self: null) -> void {
    load_var self
    load_field .second
    return
}

function user.Pair.swap(self: null) -> Pair {
    alloc_instance user.Pair
    load_var self
    load_field .second
    init_field .first
    load_var self
    load_field .first
    init_field .second
    return
}

function user.Shadow.bad(x: void) -> void {
    load_var x
    return
}

function user.Stack.peek(self: null) -> void {
    load_var self
    load_field .items
    load_const 0
    load_array_element
    return
}

function user.Wrapper.of(value: void) -> Wrapper {
    alloc_instance user.Wrapper
    load_var value
    init_field .data
    return
}

function user.use_box() -> int {
    alloc_instance user.Box
    load_const 42
    init_field .value
    call user.Box.get
    return
}

function user.use_factory() -> int {
    load_const 42
    call user.Factory.create
    call user.Factory.get
    return
}

function user.use_holder() -> int {
    alloc_instance user.Holder
    load_const "hello"
    init_field .data
    call user.Holder.get_data
    return
}

function user.use_maker_static() -> Maker {
    load_const 42
    call user.Maker.from_value
    return
}

function user.use_maybe_box() -> int {
    alloc_instance user.MaybeBox
    load_const null
    init_field .value
    load_const 0
    call user.MaybeBox.get_or_default
    return
}

function user.use_nested() -> int {
    alloc_instance user.Container
    alloc_instance user.Box
    load_const 10
    init_field .value
    init_field .inner
    call user.Container.unwrap
    return
}

function user.use_pair() -> string {
    alloc_instance user.Pair
    load_const 1
    init_field .first
    load_const "two"
    init_field .second
    call user.Pair.get_second
    return
}

function user.use_pair_swap() -> Pair {
    alloc_instance user.Pair
    load_const 1
    init_field .first
    load_const "two"
    init_field .second
    call user.Pair.swap
    return
}

function user.use_stack() -> string {
    alloc_instance user.Stack
    load_const "a"
    load_const "b"
    load_const "c"
    alloc_array 3
    init_field .items
    call user.Stack.peek
    return
}

function user.use_wrapper() -> Wrapper {
    load_const "hello"
    call user.Wrapper.of
    return
}

function user.wrong_arity_extra() -> Box {
    alloc_instance user.Box
    load_const 42
    init_field .value
    return
}

function user.wrong_arity_missing() -> Box {
    alloc_instance user.Box
    load_const 42
    init_field .value
    return
}

function user.wrong_arity_on_non_generic() -> Plain {
    alloc_instance user.Plain
    load_const "hello"
    init_field .name
    return
}

function user.wrong_arity_partial() -> Pair {
    alloc_instance user.Pair
    load_const 1
    init_field .first
    load_const "two"
    init_field .second
    return
}
